--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	<!-- PLease only edit this file for this asssignment. Thanks!-->
+	<b> "Hello World" </b>
 	<h1>Hello </h1>
 </body>
 
